# ormer

./: .gitignore  Cargo.toml  README.md  README.zh.md
.github/workflows/: rust.yml
docs/: README.md  package-lock.json  package.json
docs/.vuepress/: config.js
docs/en/: README.md
docs/en/guide/: 00_introduction.md  01_quick_start.md  02_model_definition.md  03_database_connection.md  04_crud_operations.md  05_query_builder.md  06_advanced_queries.md  07_transactions.md  08_connection_pool.md  09_hooks.md
docs/guide/: 00_introduction.md  01_quick_start.md  02_model_definition.md  03_database_connection.md  04_crud_operations.md  05_query_builder.md  06_advanced_queries.md  07_transactions.md  08_connection_pool.md  09_hooks.md
ormer/: Cargo.toml  temp_test.txt  test_output.txt
ormer-derive/: Cargo.toml
ormer-derive/src/: lib.rs  model.rs  model_enum.rs  query.rs
ormer/src/: hooks.rs  lib.rs  main.rs  model.rs  utils.rs
ormer/src/abstract_layer/: common_helpers.rs  connection_pool.rs  macros.rs  mod.rs  mssql_backend.rs  mysql_backend.rs  postgresql_backend.rs  sqlite_backend.rs  turso_backend.rs  unified.rs
ormer/src/abstract_layer/common/: common_helpers.rs  connection_pool.rs  macros.rs  mod.rs  stream_connection.rs  unified.rs
ormer/src/query/: builder.rs  filter.rs  filter_formatter.rs  mod.rs
ormer/tests/: _test_common.rs  aggregate_test.rs  aggregate_type_test.rs  auto_increment_test.rs  between_test.rs  collect_with_test.rs  composite_primary_key_test.rs  connection_pool_simple_test.rs  connection_pool_test.rs  create_table_test.rs  debug_agg_sql_test.rs  debug_create_table_test.rs  debug_sql_test.rs  direct_create_test.rs  distinct_test.rs  drop_table_test.rs  duration_field_test.rs  enum_test.rs  exec_sql_test.rs  exists_test.rs  find_by_id_test.rs  foreign_key_sql_test.rs  foreign_key_test.rs  group_by_test.rs  grouped_select_e2e_test.rs  hooks_demo_test.rs  hooks_test.rs  ignore_insert_test.rs  in_statement_test.rs  insert_batch_test.rs  insert_or_update_patterns_test.rs  insert_or_update_test.rs  join_test.rs  lateral_join_test.rs  like_test.rs  main_insert_patterns_test.rs  main_usage_test.rs  map_to_complete_test.rs  new_features_test.rs  postgresql_enum_to_sql_test.rs  (+22 more)
