[package]
name = "ormer-derive"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/fawdlstty/ormer"
homepage = "https://github.com/fawdlstty/ormer"
description = "An ORM framework with a usage style similar to Linq, supporting Turso(SQLite), PostgresQL, MySQL"
authors = ["fawdlstty<f@fawdlstty.com>"]
keywords = ["orm", "database"]
categories = []
readme = "../README.md"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
