[package]
name = "ormer"
version = "0.1.7"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/fawdlstty/ormer"
homepage = "https://github.com/fawdlstty/ormer"
description = "An ORM framework with a usage style similar to Linq, supporting Sqlite, PostgresQL, MySQL"
authors = ["fawdlstty<f@fawdlstty.com>"]
keywords = ["orm", "database"]
categories = []
readme = "../README.md"
exclude = ["src/main.rs"]

[lib]
name = "ormer"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
futures = "0.3"
ormer-derive = { version = "0.1.7", path = "../ormer-derive" }
paste = "1.0"
thiserror = "1.0"
tokio = { version = "1.52.1", features = ["full"] }
# sqlite (底层使用turso库)
turso = { version = "0.1", optional = true }
# postgres
postgres-types = { version = "0.2", optional = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
# mysql
mysql_async = { version = "0.34", optional = true }

[dev-dependencies]
paste = "1.0"

[[test]]
name = "aggregate_test"
harness = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
full = ["sqlite", "postgresql", "mysql"]
sqlite = ["dep:turso"]
postgresql = ["dep:tokio-postgres", "dep:postgres-types"]
mysql = ["dep:mysql_async"]

# cargo publish -p ormer-derive --allow-dirty --registry crates-io
# cargo publish -p ormer --allow-dirty --registry crates-io
# cd docs && npm run docs:build && cd ..
