[package]
name = "ormer"
version = "0.1.8"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/fawdlstty/ormer"
homepage = "https://github.com/fawdlstty/ormer"
description = "An ORM framework with a usage style similar to Linq, supporting Sqlite, PostgresQL, MySQL"
authors = ["fawdlstty<f@fawdlstty.com>"]
keywords = ["orm", "database"]
categories = []
readme = "../README.md"
exclude = ["src/main.rs"]

[lib]
name = "ormer"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
futures = "0.3"
ormer-derive = { version = "0.1.8", path = "../ormer-derive" }
paste = "1.0"
tokio = { version = "1.52.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde"] }
serde_json = "1.0"
# sqlite
turso = { version = "0.1", optional = true }
# postgres
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }
postgres-types = { version = "0.2", optional = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
# mysql
mysql_async = { version = "0.34", optional = true }

[dev-dependencies]
paste = "1.0"

[[test]]
name = "aggregate_test"
harness = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
full = ["sqlite", "postgresql", "mysql"]
sqlite = ["dep:turso"]
postgresql = ["dep:tokio-postgres", "dep:postgres-types", "dep:bb8", "dep:bb8-postgres"]
mysql = ["dep:mysql_async"]

# cargo publish -p ormer-derive --allow-dirty --registry crates-io
# cargo publish -p ormer --allow-dirty --registry crates-io
# cd docs && npm run docs:build && cd ..
